--- a/templates/touch1.html
+++ b/templates/touch1.html
@@ -1,14 +1,16 @@
 <ion-view view-title="Quotes" style="background-color:">
 <ion-content class='header-background has-header padding scrolling' scroll='true'>
      <div class="list card" style="height:auto">
- <div class="item item-image" style="background-color:#EF473A">
-    <h1 style="font-family:'cursive'">{{demo}}</h1>
+         <div class="item item-image" style="background-color:#EF473A">
+    <h1 style="font-family:'cursive'">{{header}}</h1>
+  </div>
+ <div class="item item-body" >
+    <h1 style="font-family:'cursive'" id="copy">"{{demo}}"</h1>
   </div>
         
-  <div class="item item-image">
+ <!-- <div class="item item-image">
     <img src="img/{{message}}/{{touchPageData}}" class="fullscreen-image" > 
-        </div>
-
+        </div>-->
 
 
          <div class='button-bar' id="buttonDiv">
