--- a/templates/touch.html
+++ b/templates/touch.html
@@ -12,10 +12,10 @@
 
 
          <div class='button-bar' id="buttonDiv">
-              <a class='button icon-left ion-chevron-left button-clear' ng-click='previousCanvas()'></a>
+              <a class='button icon-left ion-chevron-left button-clear' ng-click='previousCanvas()'>Previous</a>
              
              <!-- <a class='button button-balanced icon-right ion-android-volume-up' ng-click='soundCanvas()'>Sound</a>-->
-              <a class='button icon-right ion-chevron-right button-clear' ng-click='nextCanvas()'></a>
+              <a class='button icon-right ion-chevron-right button-clear' ng-click='nextCanvas()'>Next</a>
              
           </div>
          
