--- a/templates/touch1.html
+++ b/templates/touch1.html
@@ -5,7 +5,7 @@
     <h1 style="font-family:'cursive'">{{header}}</h1>
   </div>
  <div class="item item-body" >
-    <h1 style="font-family:'cursive'" id="copy">"{{demo}}"</h1>
+    <h2 style="font-family:'cursive'" id="copy">"{{demo}}"</h2>
   </div>
         
  <!-- <div class="item item-image">
@@ -14,10 +14,10 @@
 
 
          <div class='button-bar' id="buttonDiv">
-              <a class='button icon-left ion-chevron-left button-clear' ng-click='previousCanvas()'></a>
+              <a class='button icon-left ion-chevron-left button-clear' ng-click='previousCanvas()'>Previous</a>
              
              <!-- <a class='button button-balanced icon-right ion-android-volume-up' ng-click='soundCanvas()'>Sound</a>-->
-              <a class='button icon-right ion-chevron-right button-clear' ng-click='nextCanvas()'></a>
+              <a class='button icon-right ion-chevron-right button-clear' ng-click='nextCanvas()'>Next</a>
              
           </div>
          
