--- a/templates/listing1.html
+++ b/templates/listing1.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quotes">
+<ion-view view-title="Good Quotes">
   <ion-content style="">
      <div class="cate-lv2" style="">
          <div class="item item-image" style="background-color:#EF473A;text-align:centre !important" >
