--- a/templates/touch.html
+++ b/templates/touch.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quotes" style="background-color:">
+<ion-view view-title="Good Quotes" style="background-color:">
 <ion-content class='header-background has-header padding scrolling' scroll='true'>
      <div class="list card" style="height:auto">
  <div class="item item-image" style="background-color:#EF473A">
